# atb-mcp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  plan.md  pyproject.toml  run.sh
src/atb_mcp/: __main__.py  bigquery_client.py  server.py  validation.py
tests/: test_validation.py
